@@ -689,7 +689,6 @@ void CGUIWindowVideoPlaylist::RemovePlayListItem(int iItem)
 
 	g_playlistPlayer.GetPlaylist(PLAYLIST_VIDEO).Remove(iItem);
 
-  /*
 	//	Correct the current playing song in playlistplayer
 	if (g_playlistPlayer.GetCurrentPlaylist()==PLAYLIST_VIDEO && g_application.IsPlayingVideo())
 	{
@@ -701,10 +700,7 @@ void CGUIWindowVideoPlaylist::RemovePlayListItem(int iItem)
 		}
 	}
 
-	m_vecItems.Remove(iItem);
-
-	UpdateListControl();
-	UpdateButtons();
+  Update(m_Directory.m_strPath);
 
 	if (m_vecItems.Size()<=0)
 	{
@@ -715,10 +711,6 @@ void CGUIWindowVideoPlaylist::RemovePlayListItem(int iItem)
 		CONTROL_SELECT_ITEM(CONTROL_LIST,iItem-1)
 		CONTROL_SELECT_ITEM(CONTROL_THUMBS,iItem-1)
 	}
-  */
-  
-  // fix
-  Update(m_Directory.m_strPath);
 }
 
 void CGUIWindowVideoPlaylist::ShufflePlayList()
